# cargo-rake

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  Rakefile.toml
.cargo/: audit.toml
.github/workflows/: audit.yml  cargo-rake.yml  release.yml  test-aur-publish.yml
cargo-rake/: Cargo.toml
cargo-rake-events/: Cargo.toml
cargo-rake-events/src/: main.rs
cargo-rake/src/: main.rs
cargo-rake/tests/: cli.rs
librake/: Cargo.toml
librake/src/: cli.rs  error.rs  graph.rs  lib.rs  license.rs  lifecycle.rs  local_config.rs  rakefile.rs  signal.rs  tool.rs  toolchain.rs
librake/tests/: lifecycle_e2e.rs
packaging/arch/rake/: .SRCINFO  PKGBUILD
packaging/arch/rake-bin/: .SRCINFO  PKGBUILD
packaging/arch/rake-unstable/: .SRCINFO  PKGBUILD
packaging/arch/rake-unstable-bin/: .SRCINFO  PKGBUILD
packaging/homebrew/: rake.rb.tmpl
packaging/nfpm/: rake-aarch64.yaml  rake-unstable-aarch64.yaml  rake-unstable.yaml  rake.yaml
rake/: Cargo.toml  build.rs
rake/src/: main.rs
rake/tests/: cli.rs
xtask/: Cargo.toml
xtask/src/: main.rs
