[workspace]
resolver = "3"

members = ["librake", "cargo-rake", "rake", "xtask"]

[workspace.dependencies]
anyhow = "1.0.102"
assert_cmd = "2.2.2"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
indexmap = { version = "2.14.0", features = ["serde"] }
librake = { version = "0.3.1", path = "librake" }
predicates = "3.1.4"
rustversion = "1.0.22"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = { version = "1.1.2", features = ["preserve_order"] }
ureq = { version = "3.3.0", features = ["json"] }
vergen-gix = { version = "10.0.0", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }
vergen-pretty = { version = "10.0.0", features = ["color"] }
