[workspace]
resolver = "3"

members = ["librake", "cargo-rake", "cargo-rake-events", "rake", "xtask"]

[workspace.dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0.0"
ed25519-dalek = "3.0.0-rc.1"
gethostname = "1.1.0"
assert_cmd = "2.2.2"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.6"
clap_mangen = "0.3.0"
ctrlc = "3.5.2"
indexmap = { version = "2.14.0", features = ["serde"] }
librake = { version = "0.7.1", path = "librake" }
petname = "3.1.0"
predicates = "3.1.4"
rustversion = "1.0.22"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
signal-hook = "0.4.4"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
toml = { version = "1.1.2", features = ["preserve_order"] }
ureq = { version = "3.3.0", features = ["json", "platform-verifier"] }
vergen-gix = { version = "10.0.1", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }
vergen-pretty = { version = "10.0.1", features = ["color"] }
