[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "A configuration-driven build tool that runs named targets declared in a Rakefile.toml"
documentation = "https://docs.rs/cargo-rake"
edition = "2024"
homepage = "https://github.com/rustyhorde/cargo-rake"
keywords = ["cargo", "features", "build", "tool", "make"]
license = "MIT OR Apache-2.0"
name = "cargo-rake"
readme = "README.md"
repository = "https://github.com/rustyhorde/cargo-rake"
rust-version = "1.95.0"
version = "0.5.1"

[features]
unstable = ["librake/unstable"]

# cargo-binstall: fetch the pre-built binary from a GitHub release instead of
# compiling. The release uploads raw, statically-linked binaries named
# `cargo-rake-<target>`. The base URL uses the host target directly (works for
# musl and apple-darwin hosts); the overrides map the common glibc host triples
# onto the published musl artifacts.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-rake-{ target }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-rake-x86_64-unknown-linux-musl"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-rake-aarch64-unknown-linux-musl"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
librake = { workspace = true }
vergen-pretty = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
