[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Core library for the cargo-rake/rake build tool: parse, validate, and run Rakefile.toml targets"
documentation = "https://docs.rs/cargo-rake"
edition = "2024"
homepage = "https://github.com/rustyhorde/cargo-rake"
keywords = ["cargo", "features", "build", "tool", "make"]
license = "MIT OR Apache-2.0"
name = "librake"
readme = "README.md"
repository = "https://github.com/rustyhorde/cargo-rake"
rust-version = "1.95.0"
version = "0.1.1"

[features]
unstable = []

[dependencies]
clap = { workspace = true }
indexmap = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }
