[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Core library for the cargo-rake/rake build tool: parse, validate, and run Rakefile.toml targets"
documentation = "https://docs.rs/cargo-rake"
edition = "2024"
homepage = "https://github.com/rustyhorde/cargo-rake"
keywords = ["cargo", "features", "build", "tool", "make"]
license = "MIT OR Apache-2.0"
name = "librake"
readme = "README.md"
repository = "https://github.com/rustyhorde/cargo-rake"
rust-version = "1.95.0"
version = "0.7.0"

[features]
unstable = []

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
ed25519-dalek = { workspace = true }
gethostname = { workspace = true }
indexmap = { workspace = true }
petname = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = { workspace = true }

# Default features only: the `termination` feature only affects ctrlc's Unix
# build (which is never compiled here, since this dependency is cfg(windows)
# only) — it is a confirmed no-op on Windows, where ctrlc's console-control
# handler already covers Ctrl+C/Break/close/logoff/shutdown unconditionally.
[target.'cfg(windows)'.dependencies]
ctrlc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }
