[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "A configuration-driven build tool that runs named targets declared in a Rakefile.toml"
documentation = "https://docs.rs/cargo-rake"
edition = "2024"
homepage = "https://github.com/rustyhorde/cargo-rake"
keywords = ["cargo", "features", "build", "tool", "make"]
license = "MIT OR Apache-2.0"
name = "rake"
# The `rake` crate name is already taken on crates.io by an unrelated crate.
# This binary is distributed via AUR, DEB/RPM, and Homebrew instead, so it is
# never published to crates.io.
publish = false
readme = "README.md"
repository = "https://github.com/rustyhorde/cargo-rake"
rust-version = "1.95.0"
version = "0.1.0"

[features]
unstable = ["librake/unstable"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
librake = { workspace = true }
vergen-pretty = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }