[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "xtask"
publish = false
rust-version = "1.95.0"
version = "0.4.3"

[dependencies]
anyhow = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
librake = { workspace = true }

[package.metadata.cargo-matrix]
skip-package = true